# nepse-live-data-tracker

./: .gitignore  LICENSE  constants.py  filename.xlsx  filename1658045601.0832949.xlsx  filename2022-07-17 04:15:13.091402.xlsx  filename2022-07-17 04:16:22.924307.xlsx  filewriter.py  handleRequests.py  main.py  pyproject.toml  scrapper.py
